Update JVM tutorial