@@ -3,9 +3,9 @@
 __A Java virtual machine (JVM)__ is an abstract computing machine that enables a computer to run a Java program. There
 are three notions of the JVM: __specification, implementation, and instance__. The specification is a document that 
 formally describes what is required of a JVM implementation. Having a single specification ensures all 
- implementations are interoperable. A JVM implementation is a computer program that meets the requirements of the JVM
-  specification. An instance of a JVM is an implementation running in a process that executes a computer program 
- compiled into Java bytecode.
+implementations are interoperable. __A JVM implementation is a computer program that meets the requirements of the 
+JVM specification. An instance of a JVM is an implementation running in a process__ that executes a computer program 
+compiled into Java bytecode.
 
 __Java Runtime Environment (JRE)__ is a software package that contains what is required to run a Java program. It 
 includes a Java Virtual Machine implementation together with an implementation of the Java Class Library. The Oracle 
@@ -14,34 +14,80 @@ Corporation distributes a Java Runtime environment with their Java Virtual Machi
 __Java Development Kit (JDK)__ is a superset of a JRE and contains tools for Java programmers, e.g. a javac compiler,
  jconsole.
  
-__JVM includes:__
-* __Class Loader__
-* __JVM Memory:__
-    * Method area
-    * Heap
-    * JVM language stacks (other languages that compiles to .class are for e.g. Scala, Clojure, Groovy)
-    * PC Registers
-    * Native method stacks
-* __Execution engine:__ 
-    * JIT (Just In Time Compiler) - compiles parts of bytecode to machine code during runtime
-    * JIT: What's the difference between the -client and -server systems? 
-        * These two systems are different binaries. They are essentially two different compilers (JITs)interfacing to
-       the same runtime system. The client system is optimal for applications which need fast startup times or small
-       footprints, the server system is optimal for applications where the overall performance is most important. In 
-       general the client system is better suited for interactive applications such as GUIs. Some of the other 
-       differences include the compilation policy,heap defaults, and inlining policy.
+Besides interpreting Java bytecode, most software implementations of the __JVM include a just-in-time (JIT) compiler 
+that generates machine code for frequently used methods__. Machine code is the native language of the CPU and can be 
+executed much faster than interpreting bytecode.
+ 
+Image taken from https://anturis.com/blog/java-virtual-machine-the-essential-guide/: 
+[Hibernate documentation](https://anturis.com/blog/java-virtual-machine-the-essential-guide/jvm-architecture.png)
+
+__JVM includes the following major subsystems:__
+* __Class Loader__ - responsible for loading classes into the data areas:
+    * HotSpot uses the following hierarchy of class loaders:
+    * __Bootstrap Class Loader__ - parent of all class loaders, loads the core Java libraries and is written in 
+    native code (C)
+    * __Extension Class Loader__ - loads the extension libraries (JRE\lib\ext)
+    * __System Class Loader__ - loads application class files that are found in the classpath
+          * classpath can be set globally: e.g. set CLASSPATH=classes (this will impact all java application)
+          * locally: java -cp classes some.package.Main
+              * we can add also jar files: java -cp classes;lib\helper.jar some.package.Main
+    * __User-Defined Class Loaders__ - custom class loaders
+    * When a class loader receives a request to load a class, it checks the cache to see if the class has already 
+    been loaded, then delegates the request to the parent. If the parent fails to load the class, then the child 
+    attempts to load the class itself. A child class loader can check the cache of the parent class loader, but the 
+    parent cannot see classes loaded by the child. The design is such because a child class loader should not be 
+    allowed to load classes that are already loaded by its parent.
+    * We can use class loaders for hot deployment (update java code while application is running - add new classes)
+* __JVM Memory (5 segments):__
+    * __Heap Memory:__
+        * Eden (Young generation) - most of the new objects
+        * Survivor spaces (Young generation) - objects promoted from eden (that survives some minor GC)
+        * Tenured (Old generation) - objects that exists long time
+    * Non-Heap Memory:
+        * __Method Area__ (part of Permament Generation) - It has been removed in Java 8 from the JVM, and classes are
+         now loade as metadata to native memory of the underlying OS.
+        * __Native Method Stacks__ (part of Code cache?)
+    * __JVM Language Stacks__
+    * __PC Registers__ - (program counter) holds the addresses for JVM instructions
+* __Execution engine__ - responsible for executing instructions from the data areas:
+    * The execution engine executes commands from the bytecode loaded into the data areas one by one. To make the 
+    bytecode commands readable to the machine, the execution engine uses two methods:
+        * Interpretation - The execution engine changes each command to machine language as it is encountered.
+        * Just-in-time (JIT) compilation - If a method is used frequently, the execution engine compiles it to native 
+          code and stores it in the cache. After that, all commands associated with this method are executed directly
+           without interpretation. 
+           Although JIT compilation takes more time than interpretation, it is done only once for a method that might
+            get called thousands of times. Running such method as native code saves a lot of execution time compared 
+            to interpreting each command one by one every time it is encountered. JIT compilation is not a 
+            requirement of the JVM specification, and it is not the only technique that is used to improve JVM 
+            performance. JIT Can work as:
+            * client system
+            * server system
+            * These two systems are different binaries. They are essentially two different compilers (JITs)interfacing to
+            the same runtime system. The client system is optimal for applications which need fast startup times or small
+            footprints, the server system is optimal for applications where the overall performance is most important. In
+            general the client system is better suited for interactive applications such as GUIs. Some of the other
+            differences include the compilation policy,heap defaults, and inlining policy.
+    * Garbage Collector (Memory Management)
     
-__Class Loader:__
-* Every JVM needs 
-    * to have Bootstrap Class Loader (load all bootstrap java core .class files from JRE\lib)
-    * may have user defined Class Loaders
-    * with multiple class loaders delegation model is used
-* Load classes (.class files) into the virtual machine
-* JVM load classes from classpath:
-    * classpath can be set globally: e.g. set CLASSPATH=classes (this will impact all java application)
-    * locally: java -cp classes some.package.Main
-        * we can add also jar files: java -cp classes;lib\helper.jar some.package.Main
-* We can use class loaders for hot deployment (update java code while application is running - add new classes)
+__Memory (heap) in Java HotSpot virtual machine is divided into 3 generations:__
+* __Young generation__
+Young generation collections occur relatively frequently and are efficient and fast because the young generation
+space is usually small and likely to contain a lot of objects that are no longer referenced.
+The young generation consists of an area called __Eden__ plus two smaller __Survivor spaces__.
+Most objects are initially allocated in Eden. (A few large objects may be allocated directly in the
+old generation.) The survivor spaces hold objects that have survived at least one young generation collection
+and have thus been given additional chances to die before being considered _old enough_ to be promoted to the
+old generation.
+Executing GC on young generation is called __Minor GC__.
+* __Old generation__
+Objects that survive some number of young generation collections are eventually promoted, or tenured, to the
+old generation. This generation is typically larger than the young generation and its occupancy grows more slowly. As
+ a result, old generation collections are infrequent, but take significantly longer to complete.
+Executing GC on old generation is called __Full GC__ or __Major GC__.
+* __Permament generation__ (JVM metadata)
+Holds objects that the JVM finds convenient to have the garbage collector manage, such as objects describing classes 
+and methods, as well as the classes and methods themselves.
 
 ===
 
@@ -51,10 +97,9 @@ __A garbage collector is responsible for:__
     * allocating memory
     * ensuring that any referenced objects remain in memory, and
     * recovering memory used by objects that are no longer reachable from references in executing code (to which 
-    there is no reference in any living thread)
-Objects that are referenced are said to be live. Objects that are no longer referenced are considered dead and are
-termed garbage. The process of finding and freeing (also known as reclaiming) the space used by these objects
-is known as garbage collection
+    there is no reference in any living thread) Objects that are referenced are said to be live. Objects that are no 
+   longer referenced are considered dead and are termed garbage. The process of finding and freeing (also known as 
+   reclaiming) the space used by these objects is known as garbage collection
 
 __Types of possible GC:__
 * __Serial versus Parallel__
@@ -90,24 +135,21 @@ The benefit is that the source area can then be considered empty and available f
 subsequent allocations, but the drawback is the additional time required for copying and the extra
 space that may be required.
 
-__Memory (heap) in Java HotSpot virtual machine is divided into 3 generations:__
-* __Young generation__
-Young generation collections occur relatively frequently and are efficient and fast because the young generation
-space is usually small and likely to contain a lot of objects that are no longer referenced.
-The young generation consists of an area called __Eden__ plus two smaller __Survivor spaces__.
-Most objects are initially allocated in Eden. (A few large objects may be allocated directly in the
-old generation.) The survivor spaces hold objects that have survived at least one young generation collection
-and have thus been given additional chances to die before being considered “old enough” to be promoted to the
-old generation.
-Executing GC on young generation is called __Minor GC__.
-* __Old generation__
-Objects that survive some number of young generation collections are eventually promoted, or tenured, to the
-old generation. This generation is typically larger than the young generation and its occupancy grows more slowly. As
- a result, old generation collections are infrequent, but take significantly longer to complete.
-Executing GC on old generation is called __Full GC__ or __Major GC__.
-* __Permament generation__ (JVM metadata)
-Holds objects that the JVM finds convenient to have the garbage collector manage, such as objects describing classes 
-and methods, as well as the classes and methods themselves.
+* How HotSpot GC works:
+    * Mark / Sweep / Compact
+        * mark - identifies (mark) objects that are still in use (references to this objects exists)
+        * sweep - remove unused objects, memory will be fragmentized
+        * compact - compact the memory (not every type of GC use this)
+* Parameters for JVM:
+    * -Xms (-Xms8m) Sets the initial heap size for when the JVM starts.
+    * -Xmx (-Xmx32m) Sets the maximum heap size.
+    * -Xmn	Sets the size of the Young Generation.
+    * -XX:PermSize	Sets the starting size of the Permanent Generation.
+    * -XX:MaxPermSize	Sets the maximum size of the Permanent Generation
+
+===
+
+### Questions
 
 __What to Do about OutOfMemoryError?__
 One common issue that many developers have to address is that of applications that terminate with
@@ -125,7 +167,7 @@ This indicates that an object could not be allocated in the heap. The issue may 
 problem. You could get this error, for example, if the maximum heap size specified by the –Xmx
 command line option (or selected by default) is insufficient for the application. It could also be an
 indication that objects that are no longer needed cannot be garbage collected because the
-application is unintentionally holding references to them. The HAT tool (see Section 7) can be used to
+application is unintentionally holding references to them. The HAT tool can be used to
 view all reachable objects and understand which references are keeping each one alive. One other
 potential source of this error could be the excessive use of finalizers by the application such that the
 thread to invoke the finalizers cannot keep up with the rate of addition of finalizers to the queue. The
@@ -144,13 +186,3 @@ small or that a bug results in the application attempting to create an array who
 be incorrectly huge.
 Some of the tools that can be used to diagnose OutOfMemoryError problems are the Heap Analysis Tool (HAT), the 
 jconsole management tool, and the jmap tool with the –histo option.
-
-* GC types:
-    * Mark and Sweep (how it works):
-        * objects are stored at heap (
-        * mark - identifies (mark) objects that are still in use (references to this objects exists)
-        * sweep - remove unused objects (not mark objects)
-        * compact - compact the memory
-* Parameters for JVM:
-    * -Xmx32m -> maximum size of heap
-    * -Xms8m -> starting size of heap
